--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ opencv-python==4.7.0.68
 transforms3d==0.4.1
 pre-commit==2.20.0
 pylint==2.15.8
+antlr4-python3-runtime==4.9.1
+pexpect==4.8.0
+defusedxml==0.7.1
+pyyaml>=5.4.1
