--- a/simulation/simlan_custom_msg/CMakeLists.txt
+++ b/simulation/simlan_custom_msg/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(geometry_msgs REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "action/TeleportRobot.action"
+  "action/SetSpeed.action"
   DEPENDENCIES geometry_msgs
 )
 
