--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -106,6 +106,11 @@ RUN echo "pre-commit install --hook-type commit-msg" >>  /home/ros/.bashrc
 RUN echo "pre-commit install" >> /home/ros/.bashrc
 RUN echo "export GAZEBO_MASTER_URI=http://0.0.0.0:12345" >> /home/ros/.bashrc
 
+RUN echo "export GAZEBO_RESOURCE_PATH=/usr/share/gazebo-11" >> /home/ros/.bashrc
+RUN echo "export GAZEBO_MODEL_PATH=/usr/share/gazebo-11/models:/usr/share/gazebo-11/models" >> /home/ros/.bashrc
+RUN echo "source home/ros/src/install/setup.bash" >> /home/ros/.bashrc
+RUN echo "source /opt/dependencies_ws/install/setup.bash" >> /home/ros/.bashrc
+
 COPY . /home/ros/src/
 RUN chown -R ros:ros  /home/ros/src/
 
