feat: add colision action

--- a/simulation/simlan_custom_msg/CMakeLists.txt
+++ b/simulation/simlan_custom_msg/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(geometry_msgs REQUIRED)
 rosidl_generate_interfaces(${PROJECT_NAME}
   "action/TeleportRobot.action"
   "action/SetSpeed.action"
+  "action/Collision.action"
   DEPENDENCIES geometry_msgs
 )
 
