--- a/simulation/simlan_gazebo_environment/config/gz_bridge.yaml
+++ b/simulation/simlan_gazebo_environment/config/gz_bridge.yaml
@@ -1,21 +1,102 @@
+# ## Shared between both robots
+# - ros_topic_name: "clock"
+#   gz_topic_name: "clock"
+#   ros_type_name: "rosgraph_msgs/msg/Clock"
+#   gz_type_name: "gz.msgs.Clock"
+#   direction: GZ_TO_ROS
+
+# ## Pallet truck ----------------------------
+
+# # gz topic published by Sensors plugin
+# - ros_topic_name: "/pallet_truck/scan"
+#   gz_topic_name: "/pallet_truck/scan"
+#   ros_type_name: "sensor_msgs/msg/LaserScan"
+#   gz_type_name: "gz.msgs.LaserScan"
+#   direction: GZ_TO_ROS
+
+# # gz topic published by DiffDrive plugin
+# - ros_topic_name: "/pallet_truck/odom"
+#   gz_topic_name: "/pallet_truck/odom"
+#   ros_type_name: "nav_msgs/msg/Odometry"
+#   gz_type_name: "gz.msgs.Odometry"
+#   direction: GZ_TO_ROS
+
+# # gz topic published by DiffDrive plugin
+# - ros_topic_name: "/pallet_truck/tf"
+#   gz_topic_name: "/pallet_truck/tf"
+#   ros_type_name: "tf2_msgs/msg/TFMessage"
+#   gz_type_name: "gz.msgs.Pose_V"
+#   direction: GZ_TO_ROS
+
+# # gz topic subscribed to by DiffDrive plugin
+# - ros_topic_name: "/pallet_truck/diff_cont/cmd_vel_unstamped"
+#   gz_topic_name: "/pallet_truck/cmd_vel"
+#   ros_type_name: "geometry_msgs/msg/Twist"
+#   gz_type_name: "gz.msgs.Twist"
+#   direction: ROS_TO_GZ
+
+# # gz topic published by JointState plugin
+# - ros_topic_name: "/pallet_truck/joint_states"
+#   gz_topic_name: "pallet_truck/joint_states"
+#   ros_type_name: "sensor_msgs/msg/JointState"
+#   gz_type_name: "gz.msgs.Model"
+#   direction: GZ_TO_ROS
+
+# # gz topic published by libgazebo_ros_imu_sensor plugin
+# - ros_topic_name: "pallet_truck/imu/data"
+#   gz_topic_name: "pallet_truck/imu/data"
+#   ros_type_name: "sensor_msgs/msg/Imu"
+#   gz_type_name: "ignition.msgs.IMU"
+#   direction: GZ_TO_ROS
+
+# ## Jackal ----------------------------------
+# # gz topic published by Sensors plugin
+# - ros_topic_name: "/jackal/scan"
+#   gz_topic_name: "/jackal/scan"
+#   ros_type_name: "sensor_msgs/msg/LaserScan"
+#   gz_type_name: "gz.msgs.LaserScan"
+#   direction: GZ_TO_ROS
+
+# # gz topic published by DiffDrive plugin
+# - ros_topic_name: "/jackal/odom"
+#   gz_topic_name: "/jackal/odom"
+#   ros_type_name: "nav_msgs/msg/Odometry"
+#   gz_type_name: "gz.msgs.Odometry"
+#   direction: GZ_TO_ROS
+
+#   # gz topic published by DiffDrive plugin
+# - ros_topic_name: "/jackal/tf"
+#   gz_topic_name: "/jackal/tf"
+#   ros_type_name: "tf2_msgs/msg/TFMessage"
+#   gz_type_name: "gz.msgs.Pose_V"
+#   direction: GZ_TO_ROS
+
+# # gz topic published by JointState plugin
+# - ros_topic_name: "/jackal/joint_states"
+#   gz_topic_name: "/jackal/joint_states"
+#   ros_type_name: "sensor_msgs/msg/JointState"
+#   gz_type_name: "gz.msgs.Model"
+#   direction: GZ_TO_ROS
+
+#   # gz topic subscribed to by DiffDrive plugin
+# - ros_topic_name: "/jackal/diff_cont/cmd_vel_unstamped"
+#   gz_topic_name: "/jackal/cmd_vel"
+#   ros_type_name: "geometry_msgs/msg/Twist"
+#   gz_type_name: "gz.msgs.Twist"
+#   direction: ROS_TO_GZ
+
+#   # gz topic published by libgazebo_ros_imu_sensor plugin
+# - ros_topic_name: "/jackal/imu/data"
+#   gz_topic_name: "/jackal/imu/data"
+#   ros_type_name: "sensor_msgs/msg/Imu"
+#   gz_type_name: "ignition.msgs.IMU"
+#   direction: GZ_TO_ROS
+
+## General topics
 - ros_topic_name: "clock"
   gz_topic_name: "clock"
   ros_type_name: "rosgraph_msgs/msg/Clock"
   gz_type_name: "gz.msgs.Clock"
-  direction: GZ_TO_ROS
-
-# gz topic published by Sensors plugin
-- ros_topic_name: "/pallet_truck/scan"
-  gz_topic_name: "/pallet_truck/scan"
-  ros_type_name: "sensor_msgs/msg/LaserScan"
-  gz_type_name: "gz.msgs.LaserScan"
-  direction: GZ_TO_ROS
-
-# gz topic published by DiffDrive plugin
-- ros_topic_name: "odom"
-  gz_topic_name: "odom"
-  ros_type_name: "nav_msgs/msg/Odometry"
-  gz_type_name: "gz.msgs.Odometry"
   direction: GZ_TO_ROS
 
 # gz topic published by DiffDrive plugin
@@ -32,9 +113,18 @@
   gz_type_name: "gz.msgs.Twist"
   direction: ROS_TO_GZ
 
+
+## Pallet truck
+# gz topic published by Sensors plugin
+- ros_topic_name: "pallet_truck/scan"
+  gz_topic_name: "pallet_truck/scan"
+  ros_type_name: "sensor_msgs/msg/LaserScan"
+  gz_type_name: "gz.msgs.LaserScan"
+  direction: GZ_TO_ROS
+
 # gz topic published by JointState plugin
-- ros_topic_name: "joint_states"
-  gz_topic_name: "joint_states"
+- ros_topic_name: "pallet_tryck/joint_states"
+  gz_topic_name: "pallet_truck/joint_states"
   ros_type_name: "sensor_msgs/msg/JointState"
   gz_type_name: "gz.msgs.Model"
   direction: GZ_TO_ROS
@@ -44,4 +134,40 @@
   gz_topic_name: "pallet_truck/imu/data"
   ros_type_name: "sensor_msgs/msg/Imu"
   gz_type_name: "ignition.msgs.IMU"
+  direction: GZ_TO_ROS
+
+# gz topic published by DiffDrive plugin
+- ros_topic_name: "odom"
+  gz_topic_name: "odom"
+  ros_type_name: "nav_msgs/msg/Odometry"
+  gz_type_name: "gz.msgs.Odometry"
+  direction: GZ_TO_ROS
+
+## Jackal
+# gz topic published by Sensors plugin
+- ros_topic_name: "jackal/scan"
+  gz_topic_name: "jackal/scan"
+  ros_type_name: "sensor_msgs/msg/LaserScan"
+  gz_type_name: "gz.msgs.LaserScan"
+  direction: GZ_TO_ROS
+
+# gz topic published by JointState plugin
+- ros_topic_name: "jackal/joint_states"
+  gz_topic_name: "jackal/joint_states"
+  ros_type_name: "sensor_msgs/msg/JointState"
+  gz_type_name: "gz.msgs.Model"
+  direction: GZ_TO_ROS
+
+# gz topic published by libgazebo_ros_imu_sensor plugin
+- ros_topic_name: "jackal/imu/data"
+  gz_topic_name: "jackal/imu/data"
+  ros_type_name: "sensor_msgs/msg/Imu"
+  gz_type_name: "ignition.msgs.IMU"
+  direction: GZ_TO_ROS
+
+# gz topic published by DiffDrive plugin
+- ros_topic_name: "jackal/odom"
+  gz_topic_name: "jackal/odom"
+  ros_type_name: "nav_msgs/msg/Odometry"
+  gz_type_name: "gz.msgs.Odometry"
   direction: GZ_TO_ROS
