--- a/simulation/pallet_truck/pallet_truck_navigation/config/robot_agent_1_nav2_params.yaml
+++ b/simulation/pallet_truck/pallet_truck_navigation/config/robot_agent_1_nav2_params.yaml
@@ -2,6 +2,7 @@ robot_agent_1:
   behavior_server:
     ros__parameters:
       robot_base_frame: "robot_agent_1_base_link"
+      odom_frame: robot_agent_1_odom
 
   bt_navigator:
     ros__parameters:
@@ -67,6 +68,9 @@ robot_agent_1:
   controller_server:
     ros__parameters:
       robot_base_frame: robot_agent_1_base_link
+      odom_frame: robot_agent_1_odom
+      global_frame: map        
+      map_topic: /map         
       use_sim_time: true
       debug_trajectory_details: true
       controller_plugins: ["FollowPath"]
@@ -74,11 +78,11 @@ robot_agent_1:
         plugin: "dwb_core::DWBLocalPlanner"
         min_vel_x: -0.4
         min_vel_y: 0.0
-        max_vel_x: 2.26
+        max_vel_x: 3.26
         max_vel_y: 0.0
         max_vel_theta: 1.5
         min_speed_xy: 0.0
-        max_speed_xy: 2.26
+        max_speed_xy: 3.26
         min_speed_theta: 0.0
         min_x_velocity_threshold: 0.001
         # Add high threshold velocity for turtlebot 3 issue.
@@ -116,7 +120,9 @@ robot_agent_1:
         update_frequency: 5.0
         publish_frequency: 2.0
         global_frame: map
+        map_topic: /map
         robot_base_frame: robot_agent_1_base_link
+        odom_frame: robot_agent_1_odom
         use_sim_time: true
         plugin_names: ["obstacle_layer", "voxel_layer", "inflation_layer"]
         plugin_types: ["nav2_costmap_2d::ObstacleLayer", "nav2_costmap_2d::VoxelLayer", "nav2_costmap_2d::InflationLayer"]
@@ -153,6 +159,7 @@ robot_agent_1:
             marking: true
             data_type: "PointCloud2"
         static_layer:
+          map_topic: /map        
           map_subscribe_transient_local: true
         always_send_full_costmap: true
     local_costmap_client:
@@ -167,8 +174,10 @@ robot_agent_1:
       ros__parameters:
         update_frequency: 1.0
         publish_frequency: 1.0
-        global_frame: map
+        global_frame: robot_agent_1_base_link
         robot_base_frame: robot_agent_1_base_link
+        odom_frame: robot_agent_1_odom
+
         use_sim_time: true
         plugin_names: ["static_layer", "obstacle_layer", "voxel_layer", "inflation_layer"]
         plugin_types: ["nav2_costmap_2d::StaticLayer", "nav2_costmap_2d::ObstacleLayer", "nav2_costmap_2d::VoxelLayer", "nav2_costmap_2d::InflationLayer"]
@@ -202,6 +211,7 @@ robot_agent_1:
             marking: true
             data_type: "PointCloud2"
         static_layer:
+          map_topic: /map         
           map_subscribe_transient_local: true
         always_send_full_costmap: true
     global_costmap_client:
@@ -214,6 +224,7 @@ robot_agent_1:
   planner_server:
     ros__parameters:
       planner_plugins: ["GridBased"]  # example plugin name
+      odom_frame: robot_agent_1_odom
       GridBased:
         plugin: "nav2_navfn_planner/NavfnPlanner"  # actual plugin class name
 
