--- a/simulation/visualize_real_data/config/recorder_qos.yaml
+++ b/simulation/visualize_real_data/config/recorder_qos.yaml
@@ -1,9 +1,10 @@
-/realize_pointcloud_images/_internal_rpi_topic:
+topic_overrides:
   reliability: reliable
   durability: volatile
   depth: 10
 
-/realize_pointcloud_images/pointcloud_image:
+default:
   reliability: reliable
   durability: volatile
+  history: keep_last
   depth: 10
