--- a/simulation/visualize_real_data/package.xml
+++ b/simulation/visualize_real_data/package.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>realize_pointcloud_images</name>
-  <version>0.0.1</version>
-  <description>TODO: Description declaration</description>
+  <name>visualize_real_data</name>
+  <version>1.0.0</version>
+  <description>
+    Converts .jpg data to pointcloud message,
+    trajectory-data to MarkerArray message and
+    saves it in a rosbag for later playback.
+  </description>
   <maintainer email="linus@dynorobotics.se">Linus Gustafsson</maintainer>
   <license>TODO: License declaration</license>
 
@@ -12,9 +16,14 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>sensor_msgs_py</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>visualization_msgs</exec_depend>
 
   <exec_depend>pathlib</exec_depend>
   <exec_depend>cv2</exec_depend>
+  <exec_depend>json</exec_depend>
+  <exec_depend>time</exec_depend>
+  <exec_depend>datetime</exec_depend>
+  <exec_depend>yaml</exec_depend>
 
   <exec_depend>launch</exec_depend>
   <exec_depend>launch_ros</exec_depend>
