--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
     "name": "ROS2 RESEARCH CONTAINER",
     "dockerComposeFile": "../docker-compose.yaml",
-    "service": "factory_simulation",
+    "service": "factory_simulation_nvidia",
     "remoteUser": "ros",
     "workspaceFolder": "/home/ros/src",
     "customizations": {
