Add scenario_replayer used for replaying trajectories from a json file in gazebo together with the existing rviz visualization using either the gazebo set_pose service or by steering with cmd_vel. Add pre-process step to prepare launch to fake orientation data based on points in the trajectory. Update parameters in visualize_real_data.

--- a/simulation/pallet_truck/pallet_truck_bringup/params/twist_mux.yaml
+++ b/simulation/pallet_truck/pallet_truck_bringup/params/twist_mux.yaml
@@ -10,3 +10,7 @@
           topic   : key_vel
           timeout : 0.5
           priority: 100
+        replay:
+          topic   : replay_vel
+          timeout : 0.5
+          priority: 50
