--- a/.gitignore
+++ b/.gitignore
@@ -55,8 +55,6 @@ output/
 *.csv
 *.zip
 *.log
-camera_utility
-models*
 #auto-generated parameter files:
 control.yaml
 gz_bridge.yaml
@@ -64,4 +62,4 @@ navigate_w_replanning_and_recovery_robot_agent_*
 nav2_params.yaml
 camera_config.xacro
 PRESENTATION.html
-config.sh
+simulation/static_agent_launcher/description/camera_config.xacro
