--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,4 +41,4 @@ repos:
       additional_dependencies:
       - mdformat-gfm
       - mdformat-black
-      exclude: '(^|/)PRESENTATION\.md$'
+      exclude: '(^|/)(PRESENTATION\.md|.*\.drawio)$'
