--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,9 @@
             "source.organizeImports": "explicit"
         },
     },
+  "black-formatter.args": [
+        "--line-length=120"
+    ],
   "isort.args":["--profile", "black"],
     "cSpell.words": [
         "aruco",
