--- a/simulation/humanoid_support_moveit_config/config/ros2_controllers.yaml
+++ b/simulation/humanoid_support_moveit_config/config/ros2_controllers.yaml
@@ -103,7 +103,7 @@
         - 1000000.0
         - 0.03
         open_loop: false
-        enable_odom_tf: true
+        enable_odom_tf: false
         cmd_vel_timeout: 0.25
         preserve_turning_radius: true
         publish_cmd: true
@@ -228,7 +228,7 @@
         - 1000000.0
         - 0.03
         open_loop: false
-        enable_odom_tf: true
+        enable_odom_tf: false
         cmd_vel_timeout: 0.25
         preserve_turning_radius: true
         publish_cmd: true
