- Jackal can move now. But problems with manual steering. - Add flag for spawning jackal in config.

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ simulation/humanoid_support_moveit_config/config/ros2_controllers.yaml
 simulation/simlan_gazebo_environment/config/gz_bridge.yaml
 camera_config.xacro
 input/
+
+data_CONFIDENTIAL/**
