--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,6 @@ experiments/
 **/phobos_out/
 # colcon/CMake output
 .trunk
-Tools
 blender*
 phobos*
 .ipynb_checkpoints
@@ -43,7 +42,6 @@ ROS_DOMAIN_ID.txt
 *.pdf
 *.gv
 #### HUMANOID
-.vscode
 .vscode-server/src/ros2_numpy/
 DATASET/
 pymoveit2/
@@ -52,23 +50,22 @@ pymoveit2/
 *prediction.json
 mlenv/
 output/
-input/
 *.csv
 *.zip
 *.log
 *.png
-camera_utility
 autogluon_models*
-#auto-generated parameter files:
+*.bkp
+pandoc-log.txt
+recordings/
+humanoid_utility/input/fit3d*
+# auto-generated parameter files:
 control.yaml
 gz_bridge.yaml
 navigate_w_replanning_and_recovery_robot_agent_*
 nav2_params.yaml
-camera_config.xacro
-PRESENTATION.html
 nav2_params_humanoid.yaml
 simulation/humanoid_support_moveit_config/config/ros2_controllers.yaml
 simulation/simlan_gazebo_environment/config/gz_bridge.yaml
-*.bkp
-pandoc-log.txt
-recordings/
+camera_config.xacro
+input/
