Jackal and scenario execution now working again! - Add SPAWN_JACKAL in config. - Add jackal and scenario_execution to control.sh. - Add scenario for collision scenarios. - Add drop_nuke.py script to better clear ghost processes. - Re-add pytrees and add scenario_execution code, since the github repository for it has been removed. - Add ground truth odom to pallet_trucks.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -138,6 +138,7 @@ RUN mkdir -p /opt/dependencies_ws/src
 WORKDIR /opt/dependencies_ws
 COPY ros_dependencies.repos ros_dependencies.repos
 RUN vcs import src < ros_dependencies.repos
+COPY ./scenario_utility/scenario_execution ./src/scenario_execution
 RUN apt-get update && \
     rosdep update && \
     rosdep install -q -y --from-paths src --ignore-src && \
