Visualize_real_data package now working, minor QOL changes. - Folder for replaying collected data - Add scenario_execution to scenarios.sh - Fix visualize_real_data package. - Add rviz_config variable to config.sh - Can now ignore orientation when visualizing real data.

--- a/.gitignore
+++ b/.gitignore
@@ -70,4 +70,7 @@ simulation/simlan_gazebo_environment/config/gz_bridge.yaml
 camera_config.xacro
 input/
 
-data_CONFIDENTIAL/**
+# Replaying recorded data
+replay_data/**
+!replay_data/README.md
+!replay_data/images/images
