Deployed  with MkDocs version: 1.5.3

--- a/resources/build-documentation/mkdocs.yml
+++ b/resources/build-documentation/mkdocs.yml
@@ -35,6 +35,8 @@ nav:
       - Pose to Motion AutoGluon model: humanoid_utility/pose_to_motion/autogluon/README.md
       - Panda MoveIt2: simulation/robot_arm_moveit2/README.md # Panda
       - Object Mover: simulation/object_mover/README.md
+      - Scenario Manager: simulation/scenario_manager/README.md
+      - Visualize Real Data Package: simulation/visualize_real_data/README.md
   - Credits: credits.md
   - Appendix:
       - Issues: ISSUES.md
@@ -70,6 +72,7 @@ exclude_docs: |
   **/meshes/**
   **/textures/**
   **/materials/**
+  **/camera_**/**
   **/output/**
   **/fonts/**
   **/recordings/**
